--- a/packages/laundry_web_app/Resources/Private/Templates/Product/Show.html
+++ b/packages/laundry_web_app/Resources/Private/Templates/Product/Show.html
@@ -13,10 +13,19 @@ in /Configuration/ExtensionBuilder/settings.yaml:
 Otherwise your changes will be overwritten the next time you save the extension in the extension builder
 
 <f:section name="content">
-    <h1>Single View for Product</h1>
+    <h1>Products and service charges</h1>
 
-    <f:flashMessages />
-    <f:render partial="Product/Properties" arguments="{product:product}" />
+    <div class="row">
+        <div class="col-3">
+            Item
+        </div>
+        <div class="col-6">
+            Price_color
+        </div>
+        <div class="col-3">
+            <Price_white></Price_white>
+        </div>
+    </div>
     <f:link.action action="list">Back to list</f:link.action><br />
     <f:link.action action="new">New Product</f:link.action>
 </f:section>
