order list product list and view updated

--- a/packages/laundry_web_app/Resources/Private/Templates/Order/List.html
+++ b/packages/laundry_web_app/Resources/Private/Templates/Order/List.html
@@ -17,7 +17,7 @@ Otherwise your changes will be overwritten the next time you save the extension 
 
     <f:flashMessages />
 
-    <table  class="tx_laundrywebapp" >
+    <table  class="table tx_laundrywebapp" >
         <tr>
             <th><f:translate key="tx_laundrywebapp_domain_model_order.orderid" /></th>
             <th><f:translate key="tx_laundrywebapp_domain_model_order.customerid" /></th>
