--- a/packages/laundry_web_app/Resources/Private/Templates/Order/Show.html
+++ b/packages/laundry_web_app/Resources/Private/Templates/Order/Show.html
@@ -18,6 +18,6 @@ Otherwise your changes will be overwritten the next time you save the extension 
     <f:flashMessages />
     <f:render partial="Order/Properties" arguments="{order:order}" />
     <f:link.action action="list">Back to list</f:link.action><br />
-    <f:link.action action="new">New Order</f:link.action>
+<!--    <f:link.action action="new">New Order</f:link.action>-->
 </f:section>
 </html>
