--- a/packages/laundry_web_app/Resources/Private/Templates/Product/Show.html
+++ b/packages/laundry_web_app/Resources/Private/Templates/Product/Show.html
@@ -27,6 +27,6 @@ Otherwise your changes will be overwritten the next time you save the extension 
         </div>
     </div>
     <f:link.action action="list">Back to list</f:link.action><br />
-    <f:link.action action="new">New Product</f:link.action>
+<!--    <f:link.action action="new">New Product</f:link.action>-->
 </f:section>
 </html>
