--- a/packages/laundry_web_app/Resources/Private/Templates/DeliveryPerson/Show.html
+++ b/packages/laundry_web_app/Resources/Private/Templates/DeliveryPerson/Show.html
@@ -13,7 +13,7 @@ in /Configuration/ExtensionBuilder/settings.yaml:
 Otherwise your changes will be overwritten the next time you save the extension in the extension builder
 
 <f:section name="content">
-    <h1>Single View for DeliveryPerson</h1>
+    <h1>DeliveryPerson Details</h1>
 
     <f:flashMessages />
     <f:render partial="DeliveryPerson/Properties" arguments="{deliveryPerson:deliveryPerson}" />
