--- a/packages/laundry_web_app/Resources/Private/Templates/Order/List.html
+++ b/packages/laundry_web_app/Resources/Private/Templates/Order/List.html
@@ -13,7 +13,7 @@ in /Configuration/ExtensionBuilder/settings.yaml:
 Otherwise your changes will be overwritten the next time you save the extension in the extension builder
 
 <f:section name="content">
-    <h1>Listing for Order</h1>
+    <h1>Previous Order</h1>
 
     <f:flashMessages />
 
@@ -37,12 +37,12 @@ Otherwise your changes will be overwritten the next time you save the extension 
                 <td><f:link.action action="show" arguments="{order : order}">{order.datecreated -> f:format.date()}</f:link.action></td>
                 <td><f:link.action action="show" arguments="{order : order}">{order.deliveryPid}</f:link.action></td>
                 <td><f:link.action action="show" arguments="{order : order}">{order.statusid}</f:link.action></td>
-                <td><f:link.action action="edit" arguments="{order : order}">Edit</f:link.action></td>
-                <td><f:link.action action="delete" arguments="{order : order}">Delete</f:link.action></td>
+<!--                <td><f:link.action action="edit" arguments="{order : order}">Edit</f:link.action></td>-->
+<!--                <td><f:link.action action="delete" arguments="{order : order}">Delete</f:link.action></td>-->
             </tr>
         </f:for>
     </table>
 
-    <f:link.action action="new">New Order</f:link.action>
+    <f:link.action action="new">Create New Order</f:link.action>
 </f:section>
 </html>
