--- a/packages/laundry_web_app/Resources/Private/Templates/Order/Show.html
+++ b/packages/laundry_web_app/Resources/Private/Templates/Order/Show.html
@@ -13,7 +13,7 @@ in /Configuration/ExtensionBuilder/settings.yaml:
 Otherwise your changes will be overwritten the next time you save the extension in the extension builder
 
 <f:section name="content">
-    <h1>Single View for Order</h1>
+    <h1>Order Details</h1>
 
     <f:flashMessages />
     <f:render partial="Order/Properties" arguments="{order:order}" />
