--- a/packages/laundry_web_app/Resources/Private/Templates/Product/List.html
+++ b/packages/laundry_web_app/Resources/Private/Templates/Product/List.html
@@ -13,7 +13,23 @@ in /Configuration/ExtensionBuilder/settings.yaml:
 Otherwise your changes will be overwritten the next time you save the extension in the extension builder
 
 <f:section name="content">
-    <h1>Product List and Price</h1>
+
+    <div class="row">
+        <div class="col-6">
+            <h2>Product List and Price</h2>
+        </div>
+        <div class="col-6">
+                  <f:form action="list" controller="Product">
+                      <f:form.textfield name="search" placeholder="search" class="form-control" />
+                  </f:form>
+        </div>
+    </div>
+
+    <f:if condition="{search}">
+        <div class="alert alert-info">
+            Searched for "{search}" found {products-> f:count()} results
+        </div>
+    </f:if>
 
     <f:flashMessages />
 
