Extbase implemented for the Product Show.html

--- a/packages/laundry_web_app/Resources/Private/Partials/Product/FormFields.html
+++ b/packages/laundry_web_app/Resources/Private/Partials/Product/FormFields.html
@@ -19,4 +19,8 @@
 	<f:translate key="tx_laundrywebapp_domain_model_product.pricewhite" /> <span class="required">(required)</span>
 </label><br />
 	<f:form.textfield property="pricewhite" /><br />
+<label for="image">
+	<f:translate key="tx_laundrywebapp_domain_model_product.image" /> <span class="required">(required)</span>
+</label><br />
+	<span>File upload is not implemented!</span><br  /><br />
 </html>
