--- a/packages/laundry_web_app/Resources/Private/Partials/Product/Properties.html
+++ b/packages/laundry_web_app/Resources/Private/Partials/Product/Properties.html
@@ -40,5 +40,13 @@
 		{product.pricewhite}
 		</td>
 	</tr>
+	<tr>
+		<td>
+			<f:translate key="tx_laundrywebapp_domain_model_product.image" />
+		</td>
+		<td>
+				<f:image src="{product.image.originalResource.publicUrl}" width="200"/>
+		</td>
+	</tr>
 </table>
 </html>
