--- a/packages/laundry_web_app/Resources/Private/Templates/Product/Show.html
+++ b/packages/laundry_web_app/Resources/Private/Templates/Product/Show.html
@@ -13,20 +13,51 @@ in /Configuration/ExtensionBuilder/settings.yaml:
 Otherwise your changes will be overwritten the next time you save the extension in the extension builder
 
 <f:section name="content">
-    <h1>Product and service charges</h1>
+    <h1>{product.productname}</h1>
 
-<!--    <div class="row">-->
-<!--        <div class="col-3">-->
-<!--            Item-->
-<!--        </div>-->
-<!--        <div class="col-6">-->
-<!--            Price_color-->
-<!--        </div>-->
-<!--        <div class="col-3">-->
-<!--            <Price_white></Price_white>-->
-<!--        </div>-->
-<!--    </div>-->
-    <f:render partial ="Product/Properties" arguments="{product:product}"/>
+    <div class="row mb-3">
+        <div class="col-3">
+            <f:if condition="product.images">
+                <f:then>
+                    <f:image src="{product.image.originalResource.publicUrl}" width="200"/>
+                </f:then>
+                <f:else>
+                    No images given...
+                </f:else>
+            </f:if>
+        </div>
+        <div class="col-3">
+            <p>
+                Product Id: &nbsp;
+                <f:link.action action="show" arguments="{product : product}" controller="Product">
+                            {product.productid}
+                </f:link.action>
+            </p>
+            <p>
+                Product Name: &nbsp;
+                <f:link.action action="show" arguments="{product : product}">{product.productname}</f:link.action>
+            </p>
+        </div>
+        <div class="col-3">
+            <P>
+                Price for color: &nbsp;
+                <f:link.action action="show" arguments="{product : product}">
+                    <strong>{product.pricecolor -> f:format.currency(currencySign:'€')}</strong>
+                </f:link.action>
+            </P>
+            <P>
+                Price for White: &nbsp;
+                <f:link.action action="show" arguments="{product : product}">
+                    <strong>{product.pricewhite->f:format.currency(currencySign:'€')}</strong></f:link.action>
+            </P>
+        </div>
+        <div class="col-3">
+            <p>
+                <a class="btn btn-info" role="button">Add to Order</a>
+            </p>
+        </div>
+    </div>
+<!--    <f:render partial ="Product/Properties" arguments="{product:product}"/>-->
     <f:link.action action="list">Back to list</f:link.action><br />
 <!--    <f:link.action action="new">New Product</f:link.action>-->
 </f:section>
