--- a/packages/laundry_web_app/Resources/Private/Templates/Product/List.html
+++ b/packages/laundry_web_app/Resources/Private/Templates/Product/List.html
@@ -13,31 +13,74 @@ in /Configuration/ExtensionBuilder/settings.yaml:
 Otherwise your changes will be overwritten the next time you save the extension in the extension builder
 
 <f:section name="content">
-
     <div class="row">
         <div class="col-6">
-            <h2>Product List and Price</h2>
+        <h2>Product List and Price</h2>
         </div>
         <div class="col-6">
-                  <f:form action="list" controller="Product">
-                      <f:form.textfield name="search" placeholder="search" class="form-control" />
-                  </f:form>
+            <f:form action="list" controller="Product">
+                <f:form.textfield name="search" placeholder="search" class="form-control" />
+            </f:form>
         </div>
+        <f:if condition="{search}">
+            <div class="alert alert-info">
+                Searched for "{search}" found {products-> f:count()} results
+            </div>
+        </f:if>
     </div>
 
-    <f:if condition="{search}">
-        <div class="alert alert-info">
-            Searched for "{search}" found {products-> f:count()} results
+    <f:for each="{products}" as="product">
+        <div class="row">
+            <div class="col-3">
+                <f:link.action action="show" controller="Product" arguments="{product:product}">
+                <f:if condition="product.images">
+                    <f:then>
+                        <f:image src="{product.image.originalResource.publicUrl}" maxWidth="200" maxHeight="200"/>
+                    </f:then>
+                    <f:else>
+                        No images given...
+                    </f:else>
+                </f:if>
+                </f:link.action>
+            </div>
+            <div class="col-6">
+                <h3><f:link.action action="show" arguments="{product : product}" controller="Product">
+                    {product.productname}
+                </f:link.action></h3>
+                <p>
+                    Product Id: &nbsp;
+                    <f:link.action action="show" arguments="{product : product}" controller="Product">
+                        {product.productid}
+                    </f:link.action>
+                </p>
+                <p>
+                    Product Name: &nbsp;
+                    <f:link.action action="show" arguments="{product : product}">{product.productname}</f:link.action>
+                </p>
+            </div>
+            <div class="col-3">
+                <P>
+                    Price for color: &nbsp;
+                    <f:link.action action="show" arguments="{product : product}">
+                        <strong>{product.pricecolor -> f:format.currency(currencySign:'€')}</strong>
+                        <a class="btn btn-info" role="button">Add to Order</a>
+                    </f:link.action>
+                </P>
+                <P>
+                    Price for White: &nbsp;
+                    <f:link.action action="show" arguments="{product : product}">
+                        <strong>{product.pricewhite->f:format.currency(currencySign:'€')}</strong></f:link.action>
+                    <a class="btn btn-info" role="button">Add to Order</a>
+                </P>
+            </div>
         </div>
-    </f:if>
-
-    <f:flashMessages />
-
+        <hr>
+    </f:for>
+    <f:comment>
     <table  class="table tx_laundrywebapp" >
         <tr>
             <th><f:translate key="tx_laundrywebapp_domain_model_product.productname" /></th>
             <th><f:translate key="tx_laundrywebapp_domain_model_product.productid" /></th>
-<!--            <th><f:translate key="tx_laundrywebapp_domain_model_product.itemid" /></th>-->
             <th><f:translate key="tx_laundrywebapp_domain_model_product.pricecolor" /></th>
             <th><f:translate key="tx_laundrywebapp_domain_model_product.pricewhite" /></th>
             <th> </th>
@@ -48,15 +91,15 @@ Otherwise your changes will be overwritten the next time you save the extension 
             <tr>
                 <td><f:link.action action="show" arguments="{product : product}">{product.productname}</f:link.action></td>
                 <td><f:link.action action="show" arguments="{product : product}">{product.productid}</f:link.action></td>
-<!--                <td><f:link.action action="show" arguments="{product : product}">{product.itemid}</f:link.action></td>-->
                 <td><f:link.action action="show" arguments="{product : product}">{product.pricecolor}</f:link.action></td>
                 <td><f:link.action action="show" arguments="{product : product}">{product.pricewhite}</f:link.action></td>
-<!--                <td><f:link.action action="edit" arguments="{product : product}">Edit</f:link.action></td>-->
-<!--                <td><f:link.action action="delete" arguments="{product : product}">Delete</f:link.action></td>-->
+                <td><f:link.action action="edit" arguments="{product : product}">Edit</f:link.action></td>
+                <td><f:link.action action="delete" arguments="{product : product}">Delete</f:link.action></td>
             </tr>
         </f:for>
     </table>
 
-<!--    <f:link.action action="new">New Product</f:link.action>-->
+    <f:link.action action="new">New Product</f:link.action>
+    </f:comment>
 </f:section>
 </html>
