--- a/packages/laundry_web_app/Resources/Private/Templates/Product/Show.html
+++ b/packages/laundry_web_app/Resources/Private/Templates/Product/Show.html
@@ -28,33 +28,23 @@ Otherwise your changes will be overwritten the next time you save the extension 
         </div>
         <div class="col-3">
             <p>
-                Product Id: &nbsp;
-                <f:link.action action="show" arguments="{product : product}" controller="Product">
-                            {product.productid}
-                </f:link.action>
+                Product Id: &nbsp;{product.productid}
             </p>
             <p>
-                Product Name: &nbsp;
-                <f:link.action action="show" arguments="{product : product}">{product.productname}</f:link.action>
+                Product Name: {product.productname}
             </p>
         </div>
-        <div class="col-3">
+        <div class="col-6">
             <P>
                 Price for color: &nbsp;
-                <f:link.action action="show" arguments="{product : product}">
                     <strong>{product.pricecolor -> f:format.currency(currencySign:'€')}</strong>
-                </f:link.action>
+                   &nbsp; <a class="btn btn-info" role="button">Add to Order</a>
             </P>
             <P>
                 Price for White: &nbsp;
-                <f:link.action action="show" arguments="{product : product}">
-                    <strong>{product.pricewhite->f:format.currency(currencySign:'€')}</strong></f:link.action>
+                    <strong>{product.pricewhite->f:format.currency(currencySign:'€')}</strong>
+                 &nbsp; <a class="btn btn-info" role="button">Add to Order</a>
             </P>
-        </div>
-        <div class="col-3">
-            <p>
-                <a class="btn btn-info" role="button">Add to Order</a>
-            </p>
         </div>
     </div>
 <!--    <f:render partial ="Product/Properties" arguments="{product:product}"/>-->
