--- a/packages/laundry_web_app/Resources/Private/Templates/Product/Show.html
+++ b/packages/laundry_web_app/Resources/Private/Templates/Product/Show.html
@@ -48,7 +48,17 @@ Otherwise your changes will be overwritten the next time you save the extension 
         </div>
     </div>
 <!--    <f:render partial ="Product/Properties" arguments="{product:product}"/>-->
-    <f:link.action action="list">Back to list</f:link.action><br />
+    <f:switch expression="{back}">
+        <f:case value="overview">
+            <f:link.action action="overview" controller="Dashboard" pluginName="Overview" pageUid="{settings.pages.overview}">
+                Back to list
+            </f:link.action><br/>
+        </f:case>
+        <f:defaultCase>
+            <f:link.action action="list">Back to list</f:link.action><br />
+        </f:defaultCase>
+    </f:switch>
+
 <!--    <f:link.action action="new">New Product</f:link.action>-->
 </f:section>
 </html>
