We were trying to implement Order page same as wishlist from Book store. Instead of creating the new table in the domain model we used the exiting Order table and removed the unused Orderitem table. After adding the provideOrder function in OrderController.php we are getting the below error, however we could not find the issue.

--- a/packages/laundry_web_app/Resources/Private/Templates/Order/Show.html
+++ b/packages/laundry_web_app/Resources/Private/Templates/Order/Show.html
@@ -15,9 +15,12 @@ Otherwise your changes will be overwritten the next time you save the extension 
 <f:section name="content">
     <h1>Order Details</h1>
 
-    <f:flashMessages />
-    <f:render partial="Order/Properties" arguments="{order:order}" />
-    <f:link.action action="list">Back to list</f:link.action><br />
+    <f:if condition="customer">
+        Hello {customer.firstname}!
+    </f:if>
+<!--    <f:flashMessages />-->
+<!--    <f:render partial="Order/Properties" arguments="{order:order}" />-->
+<!--    <f:link.action action="list">Back to list</f:link.action><br />-->
 <!--    <f:link.action action="new">New Order</f:link.action>-->
 </f:section>
 </html>
