--- a/packages/laundry_web_app/Resources/Private/Templates/Product/Show.html
+++ b/packages/laundry_web_app/Resources/Private/Templates/Product/Show.html
@@ -38,12 +38,19 @@ Otherwise your changes will be overwritten the next time you save the extension 
             <P>
                 Price for color: &nbsp;
                     <strong>{product.pricecolor -> f:format.currency(currencySign:'€')}</strong>
-                   &nbsp; <a class="btn btn-info" role="button">Add to Order</a>
+                <f:link.action action="add" controller="Order" pluginName="NewOrder" arguments="{product:product}"
+                               pageUid="{settings.pages.order}" class="btn btn-info">
+                    Add to Order
+                </f:link.action>
             </P>
             <P>
                 Price for White: &nbsp;
                     <strong>{product.pricewhite->f:format.currency(currencySign:'€')}</strong>
-                 &nbsp; <a class="btn btn-info" role="button">Add to Order</a>
+                <f:link.action action="add" controller="Order" pluginName="NewOrder" arguments="{product:product}"
+                               pageUid="{settings.pages.order}" class="btn btn-info">
+                    Add to Order
+                </f:link.action>
+
             </P>
         </div>
     </div>
