Updated language configuration

--- a/packages/laundry_web_app/Resources/Private/Templates/Order/List.html
+++ b/packages/laundry_web_app/Resources/Private/Templates/Order/List.html
@@ -13,7 +13,21 @@ in /Configuration/ExtensionBuilder/settings.yaml:
 Otherwise your changes will be overwritten the next time you save the extension in the extension builder
 
 <f:section name="content">
-    <h1>Previous Order</h1>
+    <div class="row">
+        <div class="col-6">
+            <h1>Previous Order</h1>
+        </div>
+        <div class="col-6">
+            <form>
+                <input type="text" class="form-control" placeholder="search">
+            </form>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-3">image</div>
+        <div class="col-6">content</div>
+        <div class="col-3">right</div>
+    </div>
 
     <f:flashMessages />
 
